--- a/sub_site_one/style.css
+++ b/sub_site_one/style.css
@@ -45,6 +45,46 @@ nav{
 .menu li a.contacts{
 	margin-right: 100px;
 }
+.wrapper{
+	margin: 0 auto;
+	max-width: 1100px;
+	width: 100%;
+}
+.intro{
+	margin-top: 25px;
+	display: flex;
+	justify-content: flex-end;
+}
+.intro-img{
+	background-image: url(img/background.jpg);
+	width: 965px;
+	height: 640px;
+}
+.intro .intro-text{
+	position: absolute;
+	font-size: 62px;
+	right: 750px;
+	top: 220px;
+}
+.intro-contacts{
+	background-color: #ffcc01;	
+	max-width: 590px;
+	position: absolute;
+	right: 170px;
+	top: 638px;
+	display: flex;
+	justify-content: space-between;
+	padding: 30px 50px;
+}
+.intro-contacts i{
+	color: #fff;
+	margin-right: 30px;
+}
+.intro-contacts p{
+	font-size: 18px;
+	margin-right: 60px;
+}
+
 
 
 @media screen and (max-width: 765px) {
@@ -98,6 +138,33 @@ nav{
 	}
 	.menu li a.contacts{
 		margin-right: 0px;
+	}
+	.intro{
+		margin-top: 0;
+		display: block;
+		max-width: 100%;
+	}
+	.intro-img{
+		background-position: bottom 50px right 570px;
+	}
+	.intro .intro-text{
+		position: relative;
+		font-size: 35px;
+		right: -10px;
+		top: 95px;
+	}
+	.intro .intro-contacts{
+		right: 0;
+		top: -60px;
+		padding: 20px 10px;
+		position: relative;
+	}
+	.intro-contacts i{
+		margin-right: 10px;
+	}
+	.intro-contacts p{
+		font-size: 13px;
+		margin-right: 0;
 	}
 	
 }
